discussion/kv_engine/167137/167137_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-49802: Add extra uid checks to doCollectionsMetadataChecks

We're seeing issues in which manifest uids in the on disk manifest
are not equal post-flush. Add extra checks to attempt to narrow
down the root cause.

Change-Id: I3795d6a35b949a703a76f68adadb6ce932e76140

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-12-07 20:48:42.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-12-07 20:58:47.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35865/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:222:33:
error: incompatible operand types ("Collections::ManifestUid" (aka "Monotonic<unsigned long, DefaultOrderReversedPolicy, cb::greater_equal>") and "const char [3]")
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35865/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42284/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc(223): error C2446: ":": no conversion from "const char *" to "Collections::ManifestUid" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42284/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14402/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:222:33: error: incompatible operand types ("Collections::ManifestUid" (aka "Monotonic<unsigned long, DefaultOrderReversedPolicy, cb::greater_equal>") and "const char [3]") [clang-diagnostic-error]
                primaryVBCommit ? primaryVBCommit->collections.getManifestUid()
                                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:225:25: error: incompatible operand types ("Collections::ManifestUid" (aka "Monotonic<unsigned long, DefaultOrderReversedPolicy, cb::greater_equal>") and "const char [3]") [clang-diagnostic-error]
                        ? secondaryVBCommit->collections.getManifestUid()
                        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14402/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:222:33:
error: incompatible operand types ("Collections::ManifestUid" (aka "Monotonic<unsigned long, DefaultOrderReversedPolicy, cb::greater_equal>") and "const char [3]") [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14402/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16036/ : FAILURE

Compile error at [2021-12-07T20:50:41.175Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:222:33:
error: operands to ??:? have different types ?Collections::ManifestUid? {aka ?Monotonic<long unsigned int, ThrowExceptionPolicy, cb::greater_equal>?} and ?const char [3]?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16036/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4049/ : FAILURE

Compile error at [2021-12-07T20:51:45.089Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:222:33:
error: incompatible operand types ("Collections::ManifestUid" (aka "Monotonic<unsigned long, DefaultOrderReversedPolicy, cb::greater_equal>") and "const char [3]")
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4049/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17103/ : FAILURE

Compile error at [2021-12-07T20:49:57.808Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:222:33:
error: incompatible operand types ("Collections::ManifestUid" (aka "Monotonic<unsigned long, DefaultOrderReversedPolicy, cb::greater_equal>") and "const char [3]")
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17103/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16326/ : FAILURE

Compile error at [2021-12-07T20:50:45.952Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:222:33:
error: operands to ??:? have different types ?Collections::ManifestUid? {aka ?Monotonic<long unsigned int, ThrowExceptionPolicy, cb::greater_equal>?} and ?const char [3]?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16326/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15205/ : FAILURE

Compile error at [2021-12-07T20:51:21.460Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:222:33:
error: incompatible operand types ("Collections::ManifestUid" (aka "Monotonic<unsigned long long, DefaultOrderReversedPolicy, cb::greater_equal>") and "const char [3]")
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15205/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24441/ : FAILURE

Compile error at [2021-12-07T20:49:50.011Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:222:33:
error: incompatible operand types ("Collections::ManifestUid" (aka "Monotonic<unsigned long, DefaultOrderReversedPolicy, cb::greater_equal>") and "const char [3]")
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24441/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4107/ : FAILURE

Compile error at [2021-12-07T20:50:59.870Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master@2/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:222:33:
error: operands to ??:? have different types ?Collections::ManifestUid? {aka ?Monotonic<long unsigned int, ThrowExceptionPolicy, cb::greater_equal>?} and ?const char [3]?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4107/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/13227/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
